contacts: asynchronous call; see my issue at SO: http://stackoverflow.com/questions/17406194/rails-will-paginate-links-generated-in-context-of-the-controller-self

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -8,3 +8,14 @@ body { padding-top: 60px; }
   border-width: 0px;
   text-align: right;
 }
+
+.pagination {
+
+  li {
+    font-size: 8pt;
+
+    a {
+      line-height: 10px;
+    }
+  }
+}
